--- a/MyRecipeApp/MyRecipeApp/MyRecipeApp.csproj
+++ b/MyRecipeApp/MyRecipeApp/MyRecipeApp.csproj
@@ -49,6 +49,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\icon_plus.svg" />
+	  <None Remove="Resources\Images\icon_star_filled.svg" />
+	  <None Remove="Resources\Images\icon_star_outline.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0-build-156.84261" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
